--- a/Back/settings.gradle
+++ b/Back/settings.gradle
@@ -14,3 +14,7 @@ include ':usecase'
 project(':app-service').projectDir = file('./applications/app-service')
 project(':model').projectDir = file('./domain/model')
 project(':usecase').projectDir = file('./domain/usecase')
+include ':list-users'
+project(':list-users').projectDir = file('./infrastructure/entry-points/list-users')
+include ':jpa-repository'
+project(':jpa-repository').projectDir = file('./infrastructure/driven-adapters/jpa-repository')
