--- a/Back/applications/app-service/src/main/resources/log4j2.properties
+++ b/Back/applications/app-service/src/main/resources/log4j2.properties
@@ -8,3 +8,7 @@ appender.console.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1
 rootLogger.level=debug
 rootLogger.appenderRefs=stdout
 rootLogger.appenderRef.stdout.ref=STDOUT
+spring.web.cors.allowed-origins=http://localhost:4200
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
