--- a/Front/crypto-app/package.json
+++ b/Front/crypto-app/package.json
@@ -26,8 +26,11 @@
     "@ngrx/effects": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
+    "@tailwindcss/postcss": "^4.0.3",
     "express": "^4.18.2",
+    "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
